--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,12 @@ task clean(type: Delete) {
 }
 
 ext {
+    appCompatVersion = '1.0.2'
     compileSdkVersion = 28
     daggerVersion = "2.20"
-    lifeCycleVersion = "1.1.1"
-    retrofitVersion = "2.5.0"
+    lifeCycleVersion = '2.0.0'
     picassoVersion = "2.71828"
-    supportLibraryVersion = "28.0.0"
+    retrofitVersion = "2.5.0"
+    roomVersion = '2.0.0'
+    supportLibraryVersion = '1.0.0'
 }
