--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:${rootProject.ext.supportLibraryVersion}"
     implementation "androidx.legacy:legacy-support-v4:${rootProject.ext.supportLibraryVersion}"
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.supportLibraryVersion}"
+    implementation "androidx.cardview:cardview:${rootProject.ext.supportLibraryVersion}"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
