--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:${rootProject.ext.supportLibraryVersion}"
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.supportLibraryVersion}"
     implementation "androidx.cardview:cardview:${rootProject.ext.supportLibraryVersion}"
+    implementation "androidx.legacy:legacy-support-v4:${rootProject.ext.supportLibraryVersion}"
+    implementation "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
@@ -82,4 +84,5 @@ dependencies {
 
     // others
     implementation "org.apache.commons:commons-lang3:3.0"
+    implementation 'com.synnapps:carouselview:0.1.5'
 }
