--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    // custom libraries
+    implementation project(":waul")
+
     // dagger
     implementation "com.google.dagger:dagger-android:${rootProject.ext.daggerVersion}"
     implementation "com.google.dagger:dagger-android-support:${rootProject.ext.daggerVersion}"
