--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wolasoft.maplenou">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".MaplenouApplication"
@@ -23,19 +23,23 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/AppTheme"
-            android:label=""
             android:name=".views.announcement.details.AnnouncementDetailsActivity"
-            android:parentActivityName=".MainActivity">
+            android:label=""
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
+                android:value=".MainActivity" />
         </activity>
         <activity
-            android:theme="@style/AppTheme"
-            android:label=""
             android:name=".views.favorite.details.FavoriteDetailsActivity"
-            android:parentActivityName=".MainActivity">
+            android:label=""
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
