--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,5 @@ dependencies {
     // others
     implementation "org.apache.commons:commons-lang3:3.0"
     implementation 'com.synnapps:carouselview:0.1.5'
+    implementation "de.hdodenhof:circleimageview:3.0.0"
 }
