--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.common.FeedBackActivity"></activity>
-        <activity android:name=".views.common.ErrorFeedBackActivity"></activity>
+        <activity
+            android:name=".views.search.SearchActivity"
+            android:label="@string/announcement_search_title"/>
+        <activity android:name=".views.common.FeedBackActivity" />
+        <activity android:name=".views.common.ErrorFeedBackActivity" />
         <activity
             android:name=".views.city.CityListActivity"
             android:label=""
