--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -9,26 +10,18 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    flavorDimensions "version"
-
-    productFlavors {
-        paid {
-            dimension 'version'
-            applicationId "com.wolasoft.maplenou.paid"
             buildConfigField "String", "HOST", "\"http://5cadd57a845049001423bfe0.mockapi.io/api/v1/\""
         }
 
-        free {
-            dimension 'version'
-            applicationId "com.wolasoft.maplenou.free"
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             buildConfigField "String", "HOST", "\"http://5cadd57a845049001423bfe0.mockapi.io/api/v1/\""
         }
     }
@@ -89,4 +82,6 @@ dependencies {
     implementation "com.synnapps:carouselview:0.1.5"
     implementation "de.hdodenhof:circleimageview:3.0.0"
     implementation "com.google.android.gms:play-services-ads:17.2.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation 'com.android.support:multidex:1.0.3'
 }
