--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,4 +115,5 @@ dependencies {
     implementation "com.google.android.gms:play-services-ads:17.2.0"
     implementation "com.google.firebase:firebase-core:16.0.9"
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.github.chrisbanes:PhotoView:1.2.5'
 }
