--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".views.about.AboutActivity"
+            android:label="@string/activity_about_title"/>
         <activity
             android:name=".views.fullscreen.FullScreenActivity"
             android:label=""/>
